policies/deployment_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-app01
  namespace : back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-app01
  template:
    metadata:
      labels:
        app: back-app01
        role: back
    spec:
      containers:
        - name: back-app01
          image: nginx
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "500m"
