policies/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-app01
  namespace : front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-app01
  template:
    metadata:
      labels:
        app: front-app01
        role: front
    spec:
      containers:
        - name: front-app01
          image: nginx
          # resources:
          #   requests:
          #     memory: "500Mi"
          #     cpu: "500m"
          #   limits:
          #     memory: "500Mi"
          #     cpu: "500m"
