policies/deployment_middle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middle-app01
  namespace : middle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: middle-app01
  template:
    metadata:
      labels:
        app: middle-app01
        role: middle
    spec:
      containers:
        - name: middle-app01
          image: nginx
          # resources:
          #   requests:
          #     memory: "500Mi"
          #     cpu: "500m"
          #   limits:
          #     memory: "500Mi"
          #     cpu: "500m"
